tests/__snapshots__/validation-configFile-syntax-errors.snap.txt
Error: String literal with double quotes expected.

  1 | {
  2 |   'failFast': true
    |   ~~~~~~~~~~
  3 | 

      at ./tstyche.config.json:2:3

Error: Expected closing '}'.

  1 | {
  2 |   'failFast': true
  3 | 
    | ~

      at ./tstyche.config.json:3:1

    The opening '{' was seen here.

      1 | {
        | ~
      2 |   'failFast': true
      3 | 

          at ./tstyche.config.json:1:1

